# decompose-compose

./: .gitignore  Cargo.toml
.github/workflows/: deploy.yml
notes/: algo_step.txt  algorithm.txt  density.txt  pick_character.txt
src/: lib.rs
tests/: lookup.rs
